# aithena-roadmap-generation-agent

./: .gitignore  README.md  auth.py  langgraph.json  main.py  pyproject.toml  requirements.txt  test.http
examples/: example_agent_setup.json  shared_resources.txt
tutorgpt/: agents.py  chains.py  custom_invoke.py  graph.py  logger.py  notifications.py  parsers.py  prompts.py  route_workflow.py  stages.py  templates.py  tools.py  tutorgptapi.py
tutorgpt/core/: assistant.py  dialog_flow.py  llm_config.py  state.py  utilities.py
tutorgpt/embedding/: embed.py  faq.md
tutorgpt/interest_discovery_assistant/: interest_discovery_assistant.py  prompts.py  routes.py  tools.py
tutorgpt/introduction_assistant/: introduction_assistant.py  prompts.py  routes.py  tools.py
tutorgpt/learning_preferences_assistant/: learning_preferences_assistant.py  prompts.py  routes.py  tools.py
tutorgpt/models/: tavily.py
tutorgpt/primary_assistant/: primary_assistant.py  prompts.py  routes.py
tutorgpt/prior_knowledge_assistant/: prior_knowledge_assistant.py  prompts.py  routes.py  tools.py
tutorgpt/resource_preferences_assistant/: prompts.py  resource_preferences_assistant.py  routes.py  tools.py
tutorgpt/roadmap_generation_assistant/: prompts.py  roadmap_generation_assistant.py  routes.py  tools.py
tutorgpt/time_availability_assistant/: prompts.py  routes.py  time_availability_assistant.py  tools.py
tutorgpt/tools/: search_tools.py  tools.py  utilities.py
tutorgpt/utils/: config.py
